...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".ui.AddMeetingActivity">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/room_name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_input_layout_margin"
                    app:errorEnabled="true">

                <AutoCompleteTextView
                        android:id="@+id/room_name"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/meeting_room_name"
                        android:inputType="text"
                        android:textSize="@dimen/text_view_spinner_size" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/topic_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_input_layout_margin"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/topic"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/meeting_topic"
                        android:inputType="text"
                        tools:visibility="visible" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/date_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_input_layout_margin"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:hint="@string/date"
...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/from_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_input_layout_margin"
                        android:layout_weight="1"
                        app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/from"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:focusable="false"
                            android:hint="@string/from"
                            android:inputType="time"
                            tools:visibility="visible" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/to_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/text_input_layout_margin"
                        android:layout_weight="1"
                        app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/to"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:cursorVisible="false"
                            android:focusable="false"
                            android:hint="@string/to"
...

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_input_layout_margin"
                    app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/emails"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/list_of_participants"
                        android:inputType="textEmailAddress"
                        tools:visibility="visible" />

                <com.google.android.material.chip.ChipGroup
                        android:id="@+id/emails_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/chip_group_top_margin" />


            </com.google.android.material.textfield.TextInputLayout>
...
    </ScrollView>

</LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_meeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:clickable="true"
            android:focusable="auto"
...
