...
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="list_of_participants">List of participants (emails)</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="error_empty_field">Field can\'t be empty</string>
    <string name="add_new_meeting">The new meeting has been added</string>
    <string name="error_add_new_meeting">Invalid field or missing field</string>
    <string name="abort_add_meeting">Adding a meeting has been abort</string>
    <string name="action_add">Add</string>
    <string name="error_invalid_field">Field it is not valid</string>
    <string name="error_invalid_date_format">Invalid date format</string>
    <string name="error_date_passed">The date cannot be passed</string>
    <string name="error_invalid_time_format">Invalid time format</string>
    <string name="error_invalid_email">Invalid email address</string>
    <string name="error_time_comparaison">End time cannot be earlier than start time</string>
    <string name="error_meeting_room_already_booked">The meeting room is already booked</string>
    <string name="error_time_passed">The time cannot be passed</string>
    <string name="menu_filter">Filtering</string>
    <string name="item_filter_by_date">Filter by date</string>
    <string name="item_filter_before_date">Before the selected date</string>
    <string name="item_filter_match_date">Matches the selected date</string>
    <string name="item_filter_after_date">After the selected date</string>
    <string name="item_raz">Remove the filter</string>
...
